<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_movieSearch"
            android:icon="@drawable/ic_moviesearch"
            android:title="@string/movie_search" />
        <item
            android:id="@+id/nav_movieMemoir"
            android:icon="@drawable/ic_movie_memoir"
            android:title="@string/movie_memoir" />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_watchlist"
            android:title="@string/watchlist" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_maps"
            android:title="@string/maps" />
    </group>
</menu>