<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/indigo_daisy"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:textSize="80sp" />

    <EditText
        android:id="@+id/regUsernameTxt"
        android:layout_width="250dp"
        android:textColorHint="#F6F6F6"
        android:textColor="#fff"
        android:layout_height="40dp"
        android:background="#11000000"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:layout_marginBottom="35dp"
        android:layout_centerHorizontal="true"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/regPasswordTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColorHint="#F6F6F6"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:textColor="#fff"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/regFirstNameTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:textColorHint="#F6F6F6"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/firstName"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/regLastNameTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColor="#fff"
        android:textColorHint="#F6F6F6"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="130dp"
        android:inputType="textPersonName"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/LastName"
        android:textSize="16sp"
        tools:ignore="Autofill" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/regLastNameTxt"
        android:layout_alignStart="@+id/regLastNameTxt"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/genderView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/Gender" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupGender">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:text="@string/radio_male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/radio_female"/>
        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/addressTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:textColorHint="#F6F6F6"
        android:layout_marginTop="360dp"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:ems="10"
        android:textColor="#fff"
        android:hint="@string/address"
        android:inputType= "textPostalAddress"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:textColor="#fff"
        android:layout_alignLeft="@+id/addressTxt"
        android:layout_alignStart="@+id/addressTxt"
        tools:ignore="RelativeOverlap">

    <TextView
        android:id="@+id/stateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#F6F6F6"
        android:text="@string/state" />
    <Spinner
        android:id="@+id/stateSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="#F6F6F6"
        android:layout_marginStart="8dp"
        android:entries="@array/state_array"/>

    </LinearLayout>

    <EditText
        android:id="@+id/postcodeTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColorHint="#F6F6F6"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:ems="10"
        android:textColor="#fff"
        android:hint="@string/postcode"
        android:inputType= "number"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/DobText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:textColorHint="#F6F6F6"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="505dp"
        android:textColor="#fff"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:ems="10"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="false"
        android:inputType="none"
        android:hint="@string/Dob"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="-140dp"
        android:background="@android:color/holo_purple"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />
</RelativeLayout>