<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/CinemaNameTxt"
        android:layout_width="250dp"
        android:textColor="#fff"
        android:textColorHint="#F6F6F6"
        android:layout_height="40dp"
        android:background="#11000000"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/cinema_name"
        android:inputType="text"
        android:textSize="16sp"
        android:layout_marginBottom="35dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/CinemaPostcodeTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:textColor="#fff"
        android:textColorHint="#F6F6F6"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/cinema_postcode"
        android:inputType="text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_addCinema2"
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="-140dp"
        android:background="@android:color/holo_purple"
        android:text="@string/cinema_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>