<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        app:srcCompat="@drawable/watchit_white"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/usernameTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:textColorHint="#F6F6F6"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="#fff"
        android:drawableLeft="@drawable/ic_action_user"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:layout_marginBottom="35dp"
        android:layout_centerHorizontal="true"
        tools:ignore="Autofill"
        android:drawableStart="@drawable/ic_action_user" />


    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColor="#fff"
        android:layout_alignStart="@+id/usernameTxt"
        android:layout_alignLeft="@+id/usernameTxt"
        android:layout_marginStart="0dp"
        android:textColorHint="#F6F6F6"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="360dp"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <CheckBox
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/passwordTxt"
        android:layout_alignLeft="@+id/passwordTxt"
        android:layout_marginStart="4dp"
        android:textColor="#fff"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="4dp"
        android:text="Show Password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/passwordTxt"
        android:layout_alignLeft="@+id/passwordTxt"
        android:layout_alignBottom="@+id/passwordTxt"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="-140dp"
        android:background="@android:color/holo_purple"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/passwordTxt" />

    <TextView
        android:id="@+id/regHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-72dp"
        android:text="@string/register_here" />

</RelativeLayout>