<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movieNameAMLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movie Name:"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/movieNameAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="movie"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movieReleaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Release Date:"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/movieReleaseDateAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="Release Date"
            android:textColor="#fff" />
    </LinearLayout>

    <EditText
        android:id="@+id/dateTimeAddedTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="130dp"
        android:background="#11000000"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="Date time watched"
        android:inputType="none"
        android:textColor="#fff"
        android:textColorHint="#F6F6F6"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        android:textColor="#fff">

        <TextView
            android:id="@+id/cinemaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/cinemaSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#fff" />
    </LinearLayout>

    <TextView
        android:id="@+id/cinemaViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="For other cinema options:"
        android:layout_marginTop="210dp"
        android:textColor="#fff"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_cinAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="0dp"
        android:background="@android:color/holo_purple"
        android:text="@string/cinema_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />



    <EditText
        android:id="@+id/commentTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:textColor="#fff"
        android:textColorHint="#F6F6F6"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/starBarAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="459dp"
        android:numStars="5"
        android:stepSize=".5" />

    <ImageView
        android:id="@+id/imageViewAM"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="349dp"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/btn_mem"
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="550dp"
        android:background="@android:color/holo_purple"
        android:text="Memoir"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>